<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BahsisUygulama" >

    <TextView
        android:id="@+id/Fatura_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/fatura_text_view" />

    <EditText
        android:id="@+id/Fatura_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/Fatura_textView"
        android:layout_toRightOf="@+id/Fatura_textView"
        android:ems="5"
        android:inputType="numberDecimal"
        android:text="@string/fatura_edit_text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/Bahsis_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Fatura_editText"
        android:layout_alignBottom="@+id/Fatura_editText"
        android:layout_toRightOf="@+id/Fatura_editText"
        android:text="@string/bahsis_text_view" />

    <EditText
        android:id="@+id/Bahsis_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Fatura_editText"
        android:layout_toRightOf="@+id/Bahsis_textView"
        android:ems="5"
        android:inputType="numberDecimal"
        android:text="@string/bahsis_edit_text" />

    <EditText
        android:id="@+id/Toplam_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ToplamFatura_textView"
        android:layout_toRightOf="@+id/Bahsis_textView"
        android:ems="5"
        android:inputType="numberDecimal"
        android:text="@string/toplam_edit_text" />

    <TextView
        android:id="@+id/Degistir_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Bahsis_seekBar"
        android:layout_below="@+id/Fatura_editText"
        android:layout_marginTop="23dp"
        android:text="@string/degistir_text_view" />

    <SeekBar
        android:id="@+id/Bahsis_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Fatura_textView"
        android:layout_below="@+id/Degistir_textView"
        android:layout_marginTop="14dp"
        android:progress="15" />

    <TextView
        android:id="@+id/ToplamFatura_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Bahsis_seekBar"
        android:layout_marginTop="27dp"
        android:layout_toRightOf="@+id/Bahsis_textView"
        android:text="@string/toplam_text_view" />

    <TextView
        android:id="@+id/Hizmet_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Toplam_editText"
        android:text="@string/hizmet_text_view" />

    <CheckBox
        android:id="@+id/GuzelcheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Hizmet_textView"
        android:layout_below="@+id/Hizmet_textView"
        android:text="@string/hizmet_guzel_text_view" />

    <CheckBox
        android:id="@+id/Kotu_CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Orta_CheckBox"
        android:layout_alignBottom="@+id/Orta_CheckBox"
        android:layout_alignRight="@+id/Toplam_editText"
        android:text="@string/hizmet_kotu_text_view" />

    <CheckBox
        android:id="@+id/Orta_CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/GuzelcheckBox"
        android:layout_alignBottom="@+id/GuzelcheckBox"
        android:layout_centerHorizontal="true"
        android:text="@string/hizmet_orta_text_view" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/GuzelcheckBox"
        android:layout_below="@+id/GuzelcheckBox"
        android:text="@string/urun_text_view" />

    <RadioGroup
        android:id="@+id/Urun_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView01"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/UrunGuzel_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/urun_guzel_text_view" />
    </RadioGroup>

    <RadioButton
        android:id="@+id/UrunKotu_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Kotu_CheckBox"
        android:layout_below="@+id/TextView01"
        android:text="@string/urun_kotu_text_view" />

    <RadioButton
        android:id="@+id/UrunOrta_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Orta_CheckBox"
        android:layout_below="@+id/TextView01"
        android:text="@string/urun_orta_text_view" />

    <Spinner
        android:id="@+id/Problem_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Urun_radioGroup"
        android:layout_below="@+id/Urun_radioGroup"
        android:entries="@array/sorun_cozuluyor" />

    <TextView
        android:id="@+id/Hizmet_Suresi_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Problem_spinner"
        android:layout_below="@+id/Problem_spinner"
        android:text="@string/hizmetsuresi_text_view" />

    <Chronometer
        android:id="@+id/chronometer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/Hizmet_Suresi_textView"
        android:layout_toLeftOf="@+id/UrunOrta_radioGroup"
        android:text="Chronometer" />

    <Button
        android:id="@+id/Baslat_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/TextView01"
        android:layout_below="@+id/chronometer1"
        android:text="@string/baslat_kronometre_text_view" />

    <Button
        android:id="@+id/Bitir_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Durdur_button"
        android:layout_alignBottom="@+id/Durdur_button"
        android:layout_alignLeft="@+id/UrunKotu_radioGroup"
        android:layout_alignRight="@+id/UrunKotu_radioGroup"
        android:text="@string/bitir_kronometre_text_view" />

    <Button
        android:id="@+id/Durdur_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Hizmet_Suresi_textView"
        android:layout_toRightOf="@+id/chronometer1"
        android:text="@string/durdur_kronometre_text_view" />

</RelativeLayout>